Fix spelling and outdated page title

--- a/FuncGodot Manual/pages/guide_project_config.html
+++ b/FuncGodot Manual/pages/guide_project_config.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>Configuring Your Project</h1>
-
+        <h1>Project Configuration</h1>
         <h3>Directory Structure</h3>
         <p>
             Designing a directory structure for your game is its own art, and the layout of your project files can depend greatly on the kind of game you're making. 
@@ -39,7 +38,7 @@
         </p>
         <p>
             You won't create the FuncGodotProjectConfig resource for your project, as this resource doesn't actually save anything to itself directly. 
-            Instead you will use the pre-made <i>func_godot_projet_config.tres</i> resource found in the <i>addons/func_godot/</i> folder.
+            Instead you will use the pre-made <i>func_godot_project_config.tres</i> resource found in the <i>addons/func_godot/</i> folder.
         </p>
         <p align="center"><img src="../images/guide_project_config_res_loc.png" alt="Location of func_godot_project_config.tres in the Godot project File System."></p>
         
