Improve wording on FGD Output Folder instructions

--- a/FuncGodot Manual/pages/guide_project_config.html
+++ b/FuncGodot Manual/pages/guide_project_config.html
@@ -49,8 +49,8 @@
         </p>
         <p align="center"><img src="../images/ref_project_config.png" alt="FuncGodotProjectConfig resource inspector."></p>
         <p>
-            For the <b>FGD Output Folder</b>, you'll want to locate your map editor's game configuration or installation folder and then create a sub folder for 
-            your game's configuration. This might look something like <i>C:/GameDev/TrenchBroom/Games/MyGame/</i> or <i>C:/GameDev/J.A.C.K/MyGame/</i>. 
+            For the <b>FGD Output Folder</b>, you'll want to locate your map editor's game configuration folder or installation folder. Create a sub folder for your game's
+            configuration and set the <b>FGD Output Folder</b> to that sub-folder. This might look something like <i>C:/GameDev/TrenchBroom/Games/MyGame/</i> or <i>C:/GameDev/J.A.C.K/MyGame/</i>. 
             This tells FuncGodot where to save generated configuration and FGD files when you click on their export button.
         </p>
         <p>
