--- a/FuncGodot Manual/pages/faq.html
+++ b/FuncGodot Manual/pages/faq.html
@@ -30,6 +30,13 @@
             Yes.
         </p>
 
+        <p>
+            <b class="faq">How does FuncGodot handle source control?</b><br>
+            All resources that need to access or reference global paths go through the <a href="ref_project_config.html" target="main"><b>FuncGodot Project Config</b></a><br> 
+            settings that are local to each machine. The various tool and project paths do need to be set per machine. Additionally, the FuncGodotMap has the option for using 
+            a local path to map files.
+        </p>
+
         <p id="EntitiesNotBuilding">
             <b class="faq">Why are my new entities not building? Why can't I find them in my map editor?</b><br>
             Double check to make sure you set a <a href="ref_fgd_resources.html#Entity" target="main">Classname</a> in the entity resource before you exported the FGD. 
