--- a/FuncGodot Manual/pages/guide_map_editor_config.html
+++ b/FuncGodot Manual/pages/guide_map_editor_config.html
@@ -107,6 +107,9 @@
             The <b>Default Scale</b> sets the default texture scale.
         </p>
         <p>
+            The <b>Skip</b> and <b>Clip Texture</b> properties set the texture paths for a number of different shader settings in the gamepack, including <i>caulk</i>> and <i>nodraw</i>.
+        </p>
+        <p>
             Exporting the Gamepack Config will use the directory set in your 
             <a href="guide_project_config.html" target="_self">Project Configuration's <i>NetRadiant Custom Gamepacks Folder</i></a>. 
             After you've built the gamepack, open up NetRadiant Custom.
