--- a/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
+++ b/FuncGodot Manual/pages/ref_netradiant_custom_resources.html
@@ -73,6 +73,16 @@
                 <td>String</td>
                 <td>Default scale of textures in NetRadiant Custom.</td>
             </tr>
+            <tr>
+                <td>Clip Texture</td>
+                <td>String</td>
+                <td>Clip texture path that gets applied to weapclip and nodraw shaders.</td>
+            </tr>
+            <tr>
+                <td>Skip Texture</td>
+                <td>String</td>
+                <td>Skip texture path that gets applied to caulk and nodrawnonsolid shaders.</td>
+            </tr>
         </table>
 
         <br><hr>
