--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -18,6 +18,7 @@
         <p class="sidenav2">
             <a href="guide_fgd.html#FGDFile" target="main">FGD File Resource</a><br>
             <a href="guide_fgd.html#EntityClass" target="main">Entity Class Definitions</a><br>
+            <a href="guide_fgd.html#ModifyOnMapBuild" target="main">Modifying Entities on Map Build</a><br>
             <a href="guide_fgd.html#DefaultEntities" target="main">Default Entities</a>
         </p>
         <p class="sidenav"><a href="guide_textures.html" target="main">Textures</a><br></p>
@@ -54,7 +55,7 @@
 
         <p class="sidenav"><a href="ref_key_value_pairs.html" target="main">Entity Key Value Pairs</a></p>
         <p class="sidenav2">
-            <a href="ref_key_value_pairs.html#ModifyingNodesOnMapBuild" target="main">Modifying Nodes on Map Build</a><br>
+            <a href="ref_key_value_pairs.html#ApplyingKeyValues" target="main">Applying Key Values</a><br>
             <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
             <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
             <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a>
