--- a/FuncGodot Manual/pages/tips_worldspawn.html
+++ b/FuncGodot Manual/pages/tips_worldspawn.html
@@ -85,14 +85,83 @@
         </p>
         <p align=center><img src="../images/tips_worldspawn_env1.png"><br></p>
         <p>
-            Then in Godot, when the map is built and the Worldspawn's <i>func_godot_properties</i> dictionary is set, it runs the script below.
+            Then in Godot, when the map is built and the Worldspawn's <code>func_godot_properties</code> dictionary is set, it runs the 
+            <code>_func_godot_apply_properties(props)</code> method.
         </p>
-        <p align="center"><img src="../images/tips_worldspawn_env2.png" alt="GDScript setter method for Worldspawn class' func_godot_properties."></p>
+        <pre><code>@tool
+extends WorldEnvironment
+class_name Worldspawn
+
+const LIGHT_LAYER_MASK: int = 31
+
+@export var func_godot_properties: Dictionary = {}
+
+func _func_godot_apply_properties(props: Dictionary) -> void:
+	# WORLD ENVIRONMENT
+	var env: Environment = Environment.new()
+	# Base settings
+	env.set_fog_enabled(false);
+	env.set_tonemapper(Environment.TONE_MAPPER_FILMIC)
+	env.set_glow_enabled(false)
+	# Background
+	env.set_background(Environment.BG_COLOR);
+	if props.has("color_bg"):
+		env.set_bg_color(props["color_bg"]);
+	else:
+		env.set_bg_color(Color());
+	# Ambient light
+	env.set_ambient_source(Environment.AMBIENT_SOURCE_COLOR);
+	if props.has("color_ambient"):
+		env.set_ambient_light_color(props["color_ambient"]);
+	else:
+		env.set_ambient_light_color(Color.hex(0xFFFFFFFF));
+	if props.has("ambient_light"):
+		env.set_ambient_light_energy(props["ambient_light"]);
+	else:
+		env.set_ambient_light_energy(0.0);
+	env.set_ambient_light_sky_contribution(0.0)
+	# Brightness setup
+	env.set_adjustment_enabled(true)
+	env.set_adjustment_brightness(1.0)
+	set_environment(env)</code></pre>
         <p>
-            It doesn't stop there, by the way. You may have noticed at the bottom of that example <b>call_deferred("apply_lightmap_properties")</b>. 
-            This is what that function looks like:
+            It doesn't stop there, by the way. You may have noticed a number of key value pairs in our TrenchBroom entity: <i>lit_bounces</i>, <i>lit_denoiser</i>, etc... 
+            Instead of manually creating the lightmap for each map, we can have our Worldspawn entity programmatically create and modify the <i>LightmapGI</i> node 
+            any time the map is built. To do this, we'll use the <code>_func_godot_build_complete()</code> method, automatically called as a deferred call 
+            at the end of the build process.
         </p>
-        <p align="center"><img src="../images/tips_worldspawn_env3.png" alt="GDScript method for Worldspawn's 'apply_lightmap_properties'."></p>
+        <pre><code>func _func_godot_build_complete() -> void:
+	# Find existing lightmap, else build a new one
+	var lit: LightmapGI
+	if get_owner().has_node("lightmap"):
+		lit = get_owner().get_node("lightmap")
+	else:
+		lit = LightmapGI.new()
+		lit.set_name("lightmap")
+		get_owner().add_child(lit)
+		lit.set_owner(get_owner())
+	lit.get_parent().call_deferred("move_child", lit, 0);
+	lit.set_layer_mask(LIGHT_LAYER_MASK)
+	# Bake Quality
+	if func_godot_properties.has("lit_quality"):
+		lit.set_bake_quality(func_godot_properties["lit_quality"] as LightmapGI.BakeQuality)
+	else:
+		lit.set_bake_quality(LightmapGI.BakeQuality.BAKE_QUALITY_MEDIUM);
+	# Bounces
+	if func_godot_properties.has("lit_bounces"):
+		lit.set_bounces(func_godot_properties["lit_bounces"] as int)
+	else:
+		lit.set_bounces(3);
+	# Lightmapper Probes Subdivision
+	if func_godot_properties.has("lit_probes_subdiv"):
+		lit.set_generate_probes(func_godot_properties["lit_probes_subdiv"] as LightmapGI.GenerateProbes)
+	else:
+		lit.set_generate_probes(LightmapGI.GenerateProbes.GENERATE_PROBES_SUBDIV_8);
+	# Use Denoiser
+	if func_godot_properties.has("lit_denoiser"):
+		lit.set_use_denoiser(func_godot_properties["lit_denoiser"] as bool);
+	else:
+		lit.set_use_denoiser(true);</code></pre>
         <p>
             That's right: during the build process you can have your entities' properties affect other entities or nodes outside of the FuncGodotMap node. 
             This is somewhat advanced Godot scripting, as you do need to understand a bit more about when objects will exist in the SceneTree, 
