--- a/FuncGodot Manual/pages/faq.html
+++ b/FuncGodot Manual/pages/faq.html
@@ -12,6 +12,7 @@
         <p>
             <a href="#WhyBlurryTex">Why are my textures blurry?!</a><br>
             <a href="#CanIDo">Can I do...</a><br>
+            <a href="#SourceControl">How does FuncGodot handle source control?</a><br>
             <a href="#EntitiesNotBuilding">Why are my new entities not building? Why can't I find them in my map editor?</a><br>
             <a href="#NodesDisappeared">Help! I manually added some nodes to my FuncGodotMap and when I hit build again they all disappeared!</a><br>
             <a href="#SplitMap">How do I split up my map? It only comes out as one big mesh</a><br>
@@ -30,9 +31,9 @@
             Yes.
         </p>
 
-        <p>
+        <p id="SourceControl">
             <b class="faq">How does FuncGodot handle source control?</b><br>
-            All resources that need to access or reference global paths go through the <a href="ref_project_config.html" target="main"><b>FuncGodot Project Config</b></a><br> 
+            All resources that need to access or reference global paths go through the <a href="ref_local_config.html" target="main"><b>FuncGodot Local Config</b></a> 
             settings that are local to each machine. The various tool and project paths do need to be set per machine. Additionally, the FuncGodotMap has the option for using 
             a local path to map files.
         </p>
