--- a/FuncGodot Manual/pages/guide_fgd.html
+++ b/FuncGodot Manual/pages/guide_fgd.html
@@ -44,7 +44,7 @@
         <p align="center"><img src="../images/ref_fgd_file.png" alt="FuncGodotFGDFile resource properties."></p>
         <p>
             The <b>Export File</b> property does exactly what you might think: it generates and saves your FGD file to the <b>Map Editor Game Config Folder</b> set by the 
-            <a href="ref_project_config.html">FuncGodot Project Config</a>. Use this whenever you need to update your FGD.
+            <a href="ref_local_config.html">FuncGodot Local Config</a>. Use this whenever you need to update your FGD.
         </p>
         <p>
             The next property, <b>Model Key Word Supported</b>, is dependent upon which map editor you use. Point class entities in map editors can have display models assigned to them 
