--- a/FuncGodot Manual/pages/guide_map_editor_config.html
+++ b/FuncGodot Manual/pages/guide_map_editor_config.html
@@ -32,26 +32,27 @@
             along with a few other features. FuncGodot comes with a few pre-made common tags. Feel free to use them in your own GameConfig resources.
         </p>
         <p>
-            Exporting the Game Config will use the directory set in your <a href="guide_project_config.html" target="_self">Project Configuration's <i>Trenchbroom Game Config Folder</i></a>. 
+            Exporting the Game Config will use the directory set in your <a href="ref_local_config.html" target="main">Local Configuration's <i>Trenchbroom Game Config Folder</i></a>. 
             Consult the <a href="https://trenchbroom.github.io/manual/latest/#game_configuration_files" target="_blank">TrenchBroom Manual's Game Configuration documentation</a> for 
             more information. Once you've exported your Game Config, open up TrenchBroom and click <i>New Map</i>. You should now see your project in the games list.
         </p>
         <p align="center"><img src="../images/guide_me_tb_cfg_2.png" alt="TrenchBroom Config 2"></p>
         <p>
             You'll need to set the game path so that TrenchBroom can find your game's textures and any models if you created some for it. Open TrenchBroom's preferences 
-            and set your game's path to the one you set to <i>Map Editor Game Path</i> with the Project Configuration.
+            and set your game's path to the one you set to <i>Map Editor Game Path</i> with the Local Configuration.
         </p>
         <p align="center"><img src="../images/guide_me_tb_cfg_3.png" alt="TrenchBroom Config 3"></p>
         <p>Now you should be ready to start mapping for Godot with TrenchBroom!</p>
         <p align="center"><img src="../images/guide_me_tb_cfg_4.png" alt="TrenchBroom Config 3" width="50%"></p>
-        <br><br>
+        
+        <br><br><hr><br>
 
         <h2 id="JACK" align="center"><a href="https://crystice.com/jack/" target="_blank">J.A.C.K.</a></h2>
         <p align="center"><img src="../images/me_jack.png" alt="J.A.C.K. logo" height="128px"></p>
         <p>Due to how games are configured in J.A.C.K., FuncGodot does not have any dedicated resources for it but the process is still fairly simple.</p>
         <p>
-            Make sure your Project Configuration's <i>FGD Output Folder</i> is pointing to your game's folder in the J.A.C.K.'s game configuration folder. 
-            When you export an FGD file, FuncGodot will print in the Godot Output where it was saved to.
+            Make sure your <a href="ref_local_config.html" target="main">Local Configuration's <i>FGD Output Folder</i></a> is pointing to your game's folder in 
+            J.A.C.K.'s game configuration folder. When you export an FGD file, FuncGodot will print in the Godot Output where it was saved to.
         </p>
         <p align="center"><img src="../images/guide_me_jack_0.png" alt="J.A.C.K. Config 1"></p>
         <p>Once exported, you'll need to add your game to the Game Configurations list. Be sure to add your newly exported FGD as well.</p>
@@ -66,12 +67,13 @@
         </p>
         <p>And with that, you should be all set to start mapping in J.A.C.K.!</p>
         <p align="center"><img src="../images/guide_me_jack_4.png" alt="J.A.C.K. Config 5" width="75%"></p>
-        <br><br>
+        
+        <br><br><hr><br>
 
         <h2 id="NetRadiantCustom" align="center"><a href="https://github.com/Garux/netradiant-custom" target="_blank">NetRadiant Custom</a></h2>
         <p align="center"><img src="../images/me_nrc.png" alt="NetRadiant Custom logo" height="128px"></p>
         <p>
-            NetRadiant Custom receives FuncGodot support through both project configuration and <a href="ref_netradiant_custom_resources.html" target="main">dedicated resources</a>. 
+            NetRadiant Custom receives FuncGodot support through both local configuration and <a href="ref_netradiant_custom_resources.html" target="main">dedicated resources</a>. 
             The primary configuration resource is the <i>NetRadiantCustomGamepackConfig</i>. The <i>NetRadiantCustomShader</i> resource offers additional options for texture display in 
             the editor. It is highly recommended that you familiarize yourself with NetRadiant Custom before attempting to use it with FuncGodot.
         </p>
@@ -111,7 +113,7 @@
         </p>
         <p>
             Exporting the Gamepack Config will use the directory set in your 
-            <a href="guide_project_config.html" target="_self">Project Configuration's <i>NetRadiant Custom Gamepacks Folder</i></a>. 
+            <a href="ref_local_config.html" target="main">Local Configuration's <i>NetRadiant Custom Gamepacks Folder</i></a>. 
             After you've built the gamepack, open up NetRadiant Custom.
         </p>
         <p>
