--- a/FuncGodot Manual/pages/helpful_links.html
+++ b/FuncGodot Manual/pages/helpful_links.html
@@ -27,6 +27,12 @@
             <a href="https://opensource.org/license/mit/" target="_blank">MIT</a>. Not all of it can be dragged and dropped into your own projects, 
             but hopefully you'll come away from them learning something new.
         </p>
+        <p>
+            <b><a href="https://developer.valvesoftware.com/wiki/FGD" target="_blank">Valve Developer Community Wiki's FGD Page</a></b><br>
+            This is an extremely helpful resource in learning how FGD files work, and not just for Valve games or Hammer: it covers how FGD files are used by other editors 
+            too. If you want to take advantage of some more advanced features of FuncGodot's entity and configuration systems, it's helpful to study up on the FGD language that 
+            powers it.
+        </p>
         <br>
 
         <h2 id="TrenchBroom">TrenchBroom and Quake</h2>
