--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -42,7 +42,7 @@
 
         <h3 class="sidenav">Class Reference</h3>
         <p class="sidenav">
-            <a href="ref_project_config.html" target="main">FuncGodot Project Config</a><br>
+            <a href="ref_local_config.html" target="main">FuncGodot Local Config</a><br>
             <a href="ref_fgd_resources.html" target="main">FuncGodot FGD Resources</a>
         </p>
         <p class="sidenav2">
@@ -50,7 +50,8 @@
             <a href="ref_fgd_resources.html#Entity" target="main">FuncGodot FGD Entity Class</a><br>
             <a href="ref_fgd_resources.html#Base" target="main">FuncGodot FGD Base Class</a><br>
             <a href="ref_fgd_resources.html#Solid" target="main">FuncGodot FGD Solid Class</a><br>
-            <a href="ref_fgd_resources.html#Point" target="main">FuncGodot FGD Point Class</a>
+            <a href="ref_fgd_resources.html#Point" target="main">FuncGodot FGD Point Class</a><br>
+            <a href="ref_fgd_resources.html#ModelPoint" target="main">FuncGodot FGD Model Point Class</a>
         </p>
 
         <p class="sidenav"><a href="ref_key_value_pairs.html" target="main">Entity Key Value Pairs</a></p>
@@ -64,8 +65,7 @@
         <p class="sidenav"><a href="ref_trenchbroom_resources.html" target="main">TrenchBroom Resources</a></p>
         <p class="sidenav2">
             <a href="ref_trenchbroom_resources.html#GameConfig" target="main">TrenchBroom Game Config</a><br>
-            <a href="ref_trenchbroom_resources.html#Tag" target="main">TrenchBroom Tag</a><br>
-            <a href="ref_trenchbroom_resources.html#ModelPoint" target="main">TrenchBroom FGD Model Point Class</a>
+            <a href="ref_trenchbroom_resources.html#Tag" target="main">TrenchBroom Tag</a>
         </p>
 
         <p class="sidenav"><a href="ref_netradiant_custom_resources.html" target="main">NetRadiant Custom Resources</a></p>
