--- a/FuncGodot Manual/pages/guide_install.html
+++ b/FuncGodot Manual/pages/guide_install.html
@@ -21,8 +21,30 @@
         <p>
             This manual assumes you have an intermediate level of knowledge with Godot and your chosen map editor. 
         </p>
+        <br>
 
-        <h3>Downloading the Plugin</h3>
+        <h3 id="MapEdCompat">Map Editor Compatibility</h3>
+
+        <p>
+            FuncGodot directly supports the following editors with configuration resources:
+            <ul>
+                <li>TrenchBroom 2024</li>
+                <li>NetRadiant Custom 1.6</li>
+            </ul>
+        </p>
+        <p>
+            FGD outputs have also been tested with these editors:
+            <ul>
+                <li>J.A.C.K.</li>
+            </ul>
+        </p>
+        <p>
+            FuncGodot is designed to be as map editor agnostic as possible. If you use an editor that can output Quake or Half-Life 1 format map files, 
+            please let us know on GitHub or Discord so we can try our best to either support it directly or document the configuration process!
+        </p>
+        <br>
+
+        <h3 id="Download">Downloading the Plugin</h3>
 
         <p>
             There are 3 places to download FuncGodot. The first two places are both found on the <a href="https://github.com/func-godot/func_godot_plugin" target="_blank"><b>FuncGodot GitHub Repository</b></a>. 
