--- a/FuncGodot Manual/pages/guide_map_editor_config.html
+++ b/FuncGodot Manual/pages/guide_map_editor_config.html
@@ -121,11 +121,15 @@
             Select it and then select <b>Okay</b>. NetRadiant Custom will need to restart.
         </p>
         <p align="center"><img src="../images/guide_me_nrc_1.png" alt="NetRadiant Custom setup 1"></p>
-        <p>
+        <p align="center">
             You'll be prompted to find your game's engine path. Use your Godot project's root folder.
         </p>
         <p align="center"><img src="../images/guide_me_nrc_2.png" alt="NetRadiant Custom setup 2"></p>
-        <p>
+        <p align="center">
+            Lastly, you'll want to go to <b><i>Edit > Preferences > Settings > Brush</i></b>, then change <b>New map Brush Type</b> to <b>Valve 220</b>.
+        </p>
+        <p align="center"><img src="../images/guide_me_nrc_4.png" alt="NetRadiant Custom setup 2"></p>
+        <p align="center">
             Now you should be ready to start mapping for Godot with NetRadiant Custom!
         </p>
         <p align="center"><img src="../images/guide_me_nrc_3.png" alt="NetRadiant Custom setup 3"></p>
