--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -10,8 +10,12 @@
         <p class="sidenav"><a href="start.html" target="main">What <i>IS</i> FuncGodot?</a></p>
         <!--<p class="sidenav2"><a href="start.html#Credits" target="main">Who <i>MADE</i> FuncGodot?</a></p>-->
         <h3 class="sidenav">Getting Started</h3>
+        <p class="sidenav"><a href="guide_install.html" target="main">Installing FuncGodot</a></p>
+        <p class="sidenav2">
+            <a href="guide_install.html#MapEdCompat" target="main">Map Editor Compatibility</a><br>
+            <a href="guide_install.html#Download" target="main">Downloading the Plugin</a>
+        </p>
         <p class="sidenav">
-            <a href="guide_install.html" target="main">Installing FuncGodot</a><br>
             <a href="guide_project_config.html" target="main">Project Configuration</a><br>
             <a href="guide_fgd.html" target="main">Forge Game Data</a>
         </p>
