--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -137,6 +137,15 @@
                     There is no restriction on what Node Classes can be generated.
                 </td>
             </tr>
+            <tr>
+                <td>Name Property</td>
+                <td>String</td>
+                <td>
+                    Optional. Specifies a class property belonging to this entity that will be used to name the generated node upon map build. The node is renamed to 
+                    <code>"entity" + name_property</code> prior to being added to the <i>SceneTree</i> and applying <code>func_godot_properties</code>.<br><br>
+                    <i>NOTE: Node names should be unique, otherwise you may run into unexpected behavior!</i>
+                </td>
+            </tr>
         </table>
         
         <br><hr>
