--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -142,7 +142,8 @@
                 <td>String</td>
                 <td>
                     Optional. Specifies a class property belonging to this entity that will be used to name the generated node upon map build. The node is renamed to 
-                    <code>"entity" + name_property</code> prior to being added to the <i>SceneTree</i> and applying <code>func_godot_properties</code>.<br><br>
+                    <code>"entity" + name_property</code> prior to being added to the <i>SceneTree</i> and applying <code>func_godot_properties</code>.<br>
+                    Overrides the <i>Entity Name Property</i> setting in <a href="ref_func_godot_map.html#MapSettings" target="main">FuncGodotMapSettings</a>.<br><br>
                     <i>NOTE: Node names should be unique, otherwise you may run into unexpected behavior!</i>
                 </td>
             </tr>
